--- a/news6.html
+++ b/news6.html
@@ -312,7 +312,7 @@ p {
 	</tr>
 	</table>
 	
-	<a href="news5.html"><button>PREV POST &raquo;</button></a>
+	<a href="news5.html"><button>&laquo;PREV POST </button></a>
 	
 	<div id="footer">
 		<img src="logo foot.png" alt="img" height="142" width="176">
