--- a/news1.html
+++ b/news1.html
@@ -290,7 +290,7 @@ br.clearfix {
 	</tr>
 	</table>
 	
-	<a href="news2.html"><button>&laquo; NEXT POST</button></a>
+	<a href="news2.html"><button>&laquo; PREV POST</button></a>
 	
 	<div id="footer">
 		<img src="logo foot.png" alt="img" height="142" width="176">
